tests/Parsing/foreach-not-iterable.fab
#
# RUN: %fab --parse-only --print-ast %s 2> %t || true
# RUN: FileCheck %s -input-file %t
#

# CHECK: 7:{{[0-9]+}}: error: cannot iterate over int
foo = foreach x <= 42
{
	x
};
